# marlowe-apply-service

./: Dockerfile  README.md  cabal.project  marlowe-apply.cabal  request.json  start.sh
src/: Main.hs
